--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,27 +1,61 @@
 name: Playwright Tests
+
 on:
   push:
-    branches: [ main, master ]
+    branches: [ main ]
   pull_request:
-    branches: [ main, master ]
+    branches: [ main ]
+
+permissions:
+  contents: read
+
 jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v5
+      with:
+        fetch-depth: 0
+
     - uses: actions/setup-node@v5
       with:
-        node-version: lts/*
-    - name: Install dependencies
-      run: npm ci
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
+        node-version: 20
+
+    - name: Install backend deps
+      run: cd backend && npm ci
+
+    - name: Install frontend deps (serve)
+      run: cd frontend && npm i -g serve  # Если нет локально
+
+    - name: Install e2e deps & browsers
+      run: cd e2e && npm ci && npx playwright install --with-deps
+
+    - name: Start Postgres (docker)
+      run: |
+        docker-compose up -d postgres  # Только DB из docker-compose.yml
+        sleep 15
+
+    - name: Start backend API (localhost:3000)
+      run: |
+        cd backend
+        npm run dev &  # nodemon server.js
+        sleep 25
+        curl -f http://localhost:3000/tasks || exit 1
+
+    - name: Start frontend serve (localhost:5500) — ваш npx serve
+      run: |
+        cd frontend
+        npx serve -l 5500 -s . &  # -s SPA, -l 5500 порт
+        sleep 15
+        curl -f http://localhost:5500 || exit 1
+
     - name: Run Playwright tests
-      run: npx playwright test
+      run: cd e2e && npx playwright test
+
     - uses: actions/upload-artifact@v4
-      if: ${{ !cancelled() }}
+      if: always()
       with:
         name: playwright-report
-        path: playwright-report/
+        path: e2e/playwright-report/
         retention-days: 30
