--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,47 +15,43 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v5
-      with:
-        fetch-depth: 0
 
     - uses: actions/setup-node@v5
       with:
         node-version: 20
 
-    - name: Install backend deps
-      run: cd backend && npm ci
-
-    - name: Install frontend deps (serve)
-      run: cd frontend && npm i -g serve  # Если нет локально
-
-    - name: Install e2e deps & browsers
-      run: cd e2e && npm ci && npx playwright install --with-deps
-
-    - name: Set up Docker Compose v2
-      uses: docker/setup-compose-action@v1
-
-    - name: Start Postgres DB oly
+    - name: Install deps
       run: |
-        docker compose up -d postgres  # v2 работает!
+        cd backend && npm ci
+        cd ../frontend && npm i -g serve
+        cd ../e2e && npm ci
+
+    - uses: docker/setup-compose-action@v1
+
+    - name: Start DB (db → tasks-db)
+      run: |
+        docker compose up -d db
         sleep 25
-        docker compose ps postgres  # postgres: Up (healthy)
+        docker compose ps db
 
-
-    - name: Start backend API (localhost:3000)
+    - name: Start backend API :3000
       run: |
         cd backend
-        npm run dev &  # nodemon server.js
+        npm run dev &
         sleep 25
-        curl -f http://localhost:3000/tasks || exit 1
+        curl -f http://localhost:3000/tasks
 
-    - name: Start frontend serve (localhost:5500) — ваш npx serve
+    - name: Start frontend serve :5500
       run: |
         cd frontend
-        npx serve -l 5500 -s . &  # -s SPA, -l 5500 порт
+        npx serve -l 5500 -s . &
         sleep 15
-        curl -f http://localhost:5500 || exit 1
+        curl -f http://localhost:5500
 
-    - name: Run Playwright tests
+    - name: Playwright browsers
+      run: cd e2e && npx playwright install --with-deps
+
+    - name: Run tests
       run: cd e2e && npx playwright test
 
     - uses: actions/upload-artifact@v4
